--- a/slides/slides_51.Rmd
+++ b/slides/slides_51.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "PLSC30500, Fall 2021"
-subtitle: "5.1 Regression basics"
+subtitle: "5.1 Regression"
 # author: "Andy Eggers & Molly Offer-Westort"
 output: 
   xaringan::moon_reader:
@@ -8,6 +8,8 @@ output:
     css: [default, uchicago_pol_meth.css]
     nature:
       highlightLines: true
+      countIncrementalSlides: false
+
 ---
 
 ```{r setup, include=FALSE}
@@ -18,41 +20,20 @@ knitr::opts_chunk$set(fig.retina = 3, warning = FALSE, message = FALSE, fig.alig
 
 class: inverse, middle, center
 
-# What is regression? 
-
-
-<!-- Todo: might add a thing about interpreting the coefficient by plotting it via predictions, etc -- what IS the best way to do that, anyway? might be sjplot plot_model  -->
+# Regression: what it is and how to do it
 
 ---
 
-## Regression in general 
+## Regression: what is it for?
 
 In **regression analysis**, we estimate the relationship between a **dependent variable** $(Y_i)$ and **independent variables** $(X_i, D_i, \ldots)$
 
 <br> </br>
 
-Regression **describes** the relationship between $Y_i$ and $\mathbf{X}_i$, but in some circumstances we can use it for  
+Regression **describes** the relationship between $Y_i$ and $\mathbf{X}_i$ in a dataset, but in some circumstances we can use it for  
 
 - prediction (what will $Y_i$ be, given some $X_i$?)
 - causal inference (what is effect of $D_i$ on $Y_i$?)
-
----
-
-## Prediction and causal inference: an example
-
-Suppose we had this data for each country $i$:
-
-- $Y_i$: was there civil conflict?
-- $D_i$: was there a peace-keeping operation in the past 5 years? 
-- $X_i$: GDP
-
---
-
-<br> </br>
-
-Would $D_i$ and $X_i$ be useful **predictors** of $Y_i$? 
-
-If $D_i$ predicts $Y_i$, does that mean peace-keeping affects civil conflict?
 
 ---
 
@@ -62,45 +43,52 @@ When we say "regression" we often mean **ordinary least squares (OLS)**.
 
 --
 
-We seek a linear prediction of $Y$ based on $D_i$ and $X_i$: 
+Suppose we want to describe $Y_i$ as a function of $D_i$ and $X_i$ given $n$ observations: 
 
 $$ \hat{Y}_i = \hat{\beta}_0 + \hat{\beta}_1 D_i + \hat{\beta}_2 X_i $$ 
+
+Note: 
+
+- the " $\hat{}$ "s ("hat"s) indicate estimates; without the " $\hat{}$ " they are population parameters ("truth")
+- $\hat{\beta}_0$, $\hat{\beta}_1$, $\hat{\beta}_2$ are "coefficients" or "coefficient estimates"   
+
 --
 
 Define $Y_i - \hat{Y_i} = \hat{r}_i$ as the **residual**. 
 
 --
 
-We seek **coefficients** $\hat{\beta}_0, \hat{\beta}_1, \hat{\beta}_2$ that minimize the **sum of squared residuals**, i.e.
+We seek coefficient estimates that minimize the **sum of squared residuals**, i.e.
 
 $$ \underset{\hat{\beta}_0, \hat{\beta}_1, \hat{\beta}_2}{\arg\min} \sum_i  \left(Y_i - (\hat{\beta}_0 + \hat{\beta}_1 D_i + \hat{\beta}_2 X_i)\right)^2 $$
 
+<!-- Don't know why the math doesn't work. I want \sum_{i=1}^n -->
 
 ---
 
-## Toy example 
+## Toy example 1
 
 
 .pull-left[
 
 Suppose we have this data: 
 ```{r get-data, echo = F}
-set.seed(1245)
-df <- tibble(x = rnorm(2), y = x + rnorm(2, sd = .4)) %>% 
-  bind_rows(tibble(x = -sum(.$x), y = -sum(.$y) + rnorm(1, .1)))
+dat <- tribble(~x, ~y,
+        0, -1,
+        1, 1,
+        1, 2)
 
-df %>% 
+dat %>% 
   kableExtra::kbl(full_width = F, digits = 2)
 ```
 ]
 
 .pull-right[
 ```{r, out.width = "500px", echo = F}
-df %>% 
+dat %>% 
   ggplot(aes(x = x, y = y)) + 
   geom_point() + 
-  expand_limits(x = c(-2, 2), y = c(-2, 2)) + 
-  coord_fixed() 
+  expand_limits(x = c(-.25, 1.25), y = c(-1.25, 2.25))
 
 ```
 ]
@@ -108,254 +96,322 @@ df %>%
 <br> </br>
 <br> </br>
 
-What slope $\hat{\beta}_0$ and intercept $\hat{\beta}_1$ would minimize the sum of squared residuals? 
+What **intercept** $\hat{\beta}_0$ and **slope** $\hat{\beta}_1$ would minimize the sum of squared residuals? 
 
 ---
 
-## Regression through guessing 
+## Toy example 1 (2)
 
-Let's try $\hat{\beta}_0 = 0$ and $\hat{\beta}_1 = 1$.
+```{r}
+# base R
+lm(y ~ x, data = dat)
+# estimatr package
+estimatr::lm_robust(y ~ x, data = dat)
+```
 
-```{r, echo = F, out.width = "600px"}
-df %>% 
-  mutate(i = 1:n(),
-         y2 = x,
-         resid = y - x) -> df2
+---
 
-df2 %>%  
-  pivot_longer(cols = c(y, y2), values_to = "y") %>% 
-  select(i, x, y) -> df3
+## Toy example 1 (3)
 
-#df2 %>% 
-#  summarize(sum(resid^2))
-
-
-df %>% 
+```{r, out.width="70%"}
+dat %>% 
   ggplot(aes(x = x, y = y)) + 
-  geom_point() + 
-  expand_limits(x = c(-2, 2), y = c(-2, 2)) + 
-  coord_fixed() + 
-  geom_abline(intercept = 0, slope = 1, lty = 2) + 
-  geom_line(data = df3, aes(group = i), col = "red")
-
-```
-
-What is the sum of squared residuals? 
-
----
-
-## Computing SSR 
-
-```{r}
-# dplyr way
-df %>% 
-  mutate(prediction = 0 + 1*x,
-         residual = y - prediction) %>% 
-  summarize(ssr = sum(residual^2))
-
-# more concise way 
-df %>% 
-  summarize(ssr = (y - x)^2 %>% sum())
-
-# base R way
-sum((df$y - df$x)^2)
-```
-
----
-
-## A function 
-
-```{r}
-ssr_for_df <- function(intercept, slope){
-  df %>% 
-    mutate(prediction = intercept + slope*x, #<<
-           residual = y - prediction) %>% 
-    summarize(ssr = sum(residual^2)) %>% 
-    as.numeric()
-}
-```
-
-For example: 
-
-```{r}
-ssr_for_df(intercept = 0, slope = 1)
-ssr_for_df(intercept = 0, slope = 2)
-```
-
----
-
-## "Grid search" over one dimension
-
-We compute SSR for a range of slopes assuming intercept of zero: 
-
-```{r, fig.asp = .5}
-tibble(intercept = 0, slope = seq(0, 2, by = .05)) %>% 
-  mutate(ssr = map2_dbl(intercept, slope, ssr_for_df)) %>% 
-  ggplot(aes(x = slope, y = ssr)) + 
+  geom_smooth(method = lm, se = F) + 
   geom_point()
 ```
 
 ---
 
-## "Grid search" over two dimensions
 
-Now consider other intercepts: 
+## Toy example 2
 
-```{r, fig.asp = .5}
-expand_grid(intercept = seq(-.25, .25, by = .05), slope = seq(1, 1.5, by = .05)) %>% 
-  mutate(ssr = map2_dbl(intercept, slope, ssr_for_df)) %>% 
-  ggplot(aes(x = intercept, y = slope, fill = ssr)) + 
-  geom_tile() + 
-  coord_fixed()
+Suppose we have this data: 
+```{r get-data-2, out.width = "60%"}
+set.seed(1245)
+n <- 100
+dat2 <- tibble(x = rnorm(n), 
+               y = x + rnorm(n, sd = .8))
+
+dat2 %>% 
+  ggplot(aes(x = x, y = y)) + 
+  geom_point(size = 2)  
 ```
+
+<br> </br>
+<br> </br>
+
+What **slope** $\hat{\beta}_0$ and **intercept** $\hat{\beta}_1$ would minimize the sum of squared residuals? 
 
 ---
 
-## There must be a better way
-
-Grid search works, but $\ldots$.
-
-`R` has better ways: 
+## Toy example 2 (2)
 
 ```{r}
-lm(y ~ x, data = df)
-estimatr::lm_robust(y ~ x, data = df)
+# base R
+lm(y ~ x, data = dat2)
+# estimatr package
+estimatr::lm_robust(y ~ x, data = dat2)
 ```
 
 ---
 
-## How? 
+## Toy example 2 (3)
 
-Calculus and linear algebra. (See Linear Models, next course in sequence!)
+```{r, out.width="70%"}
+dat2 %>% 
+  ggplot(aes(x = x, y = y)) + 
+  geom_smooth(method = lm, se = F) + 
+  geom_point()
+```
 
 ---
 
-## It's just "linear" regression, right?
+## How does `R` minimize the sum of squared residuals?
 
-In OLS we model $Y$ as an additive function of predictors: 
+Calculus and linear algebra. 
 
-$$Y_i = \beta_0 + \beta_1 X_{i1} + \beta_2 X_{i2} + \ldots + \beta_k X_{ik} + \epsilon_i$$
+<br> </br>
+<br> </br>
+
+(See Linear Models, next course in sequence!)
+
+---
+
+
+
+## Interview question
+
+Why is OLS "ordinary least **squares**?"
+
+---
+
+class: inverse, middle, center
+
+# No predictors
+
+---
+
+
+## Predicting the value of a random variable
+
+Let $Y$ denote the number of heads in a single flip of a biased coin.
 
 --
 
-.pull-left[
-Does this mean OLS is only useful when you have relationships that look like this?
+Suppose we know the probability mass function of $Y$: 
 
-**No.**
-]
+$$
+f(y) = \begin{cases}
+1/3 & y = 0 \\\
+2/3 & y = 1 \\\
+0 & \text{otherwise}
+\end{cases}
+$$
+--
+
+The PMF fully describes the random variable.
+
+--
+
+Suppose you wanted to predict the value of $Y$ using a single number: what would you choose?
 
 
-.pull-right[
-```{r echo = F, out.width = "400px"}
-n <- 100
-tibble(x = rnorm(n)) %>% 
-  mutate(y = x + rnorm(n, sd = .35)) %>% 
-  ggplot(aes(x = x, y = y)) + 
-  geom_point()
+???
 
-```
+You could choose the mode here, but the expectation is the best choice if we are using MSE as the criterion.
 
-]
+---
+
+## Mean squared error (MSE) as a criterion for prediction
+
+**Definition**: Given random variable $Y$ and scalar $c$, the *mean  squared error* of $Y$ about $c$ is $E[(Y - c)^2]$. (Aronow & Miller, 2.1.22)
+
+--
+
+**Theorem**: The value of $c$ that minimizes MSE of $Y$ about $c$ is $E[Y]$.
+
+--
+
+**Proof**: see proof of theorem 2.1.24 in Aronow & Miller.
+
+???
+
+Basic idea is to decompose MSE of $Y$ wrt $c$ as variance of $Y$ plus squared difference between $E[Y]$ and $c$. To minimize that squared difference, set $c$ equal to $E[Y]$.
+
+--
+
+So our MSE-minimizing prediction for $Y$ is $E[Y] = 2/3$.
+
+$$
+f(y) = \begin{cases}
+1/3 & y = 0 \\\
+2/3 & y = 1 \\\
+0 & \text{otherwise}
+\end{cases}
+$$
+---
+
+## Populations and samples
+
+To compute $E[Y]$, we need to know the distribution (CDF or PMF/PDF) of $Y$.
+
+--
+
+The distribution of $Y$ is a feature of the  **population** (or *infinite population*).
+ 
+--
+
+In statistics, we typically have a **sample** and want to make inferences about the **population**.
+
+--
+
+Given an iid sample, the sample mean is an unbiased estimator of $E[Y]$ (Theorem 3.2.3 in Aronow & Miller).
+
+--
+
+**Expected value** of a random variable $Y$: 
+$$E[Y] = \sum_y y f(y) $$
+
+The **sample mean** of iid random variables $Y_1, Y_2, \ldots, Y_n$:
+
+$$\overline{Y} = \frac{Y_1 + Y_2 + \ldots + Y_n}{n} = \frac{1}{n} \sum_{i = 1}^n Y_i$$
+
+---
+
+## The plug-in principle (simplified)
+
+The **plug-in principle** says that you can (usually) get a good estimate of a statistic defined for the population by substituting "sample quantities" for "population quantities".
+
+--
+
+Population quantity: $E[Y]$ (expectation)
+Sample quantity we "plug in": $\overline{Y}$ (sample mean)
+
+--
+
+But we can take the plug-in principle further:
+
+--
+
+Instead of choosing $c$ to minimize MSE (expected squared **error**) 
+$$ E[(\underbrace{Y - c}_{\textrm{error}})^2],$$
+we can choose $c$ to minimize the sample average of the squared **residuals**:
+$$\frac{1}{n} \sum_{i = 1}^n (y_i - c)^2.$$
+This is another (convoluted!) way to compute the sample mean.
 
 
 ---
 
-Here we put in:
+## MSE and SSR
 
-- transformations (logs, polynomials)
-- categorical variables 
+Mean squared error: 
+
+$$ E[(\underbrace{Y - c}_{\textrm{error}})^2]$$
+
+Mean squared residual:
+
+$$ \frac{1}{n} \sum_{i = 1}^n (y_i - c)^2 $$
+
+--
+
+Note the $1/n$ doesn't depend on our prediction, so we often talk about the **sum of squared residuals**.
+
+???
+
+If we started with minimum mean squared error as the objective, why do we end up minimizing the **sum** of squared residuals?
 
 ---
 
+class: bg-full
+background-image: url("assets/MSE_SSR_diagram_2.png")
+background-position: center
+background-size: 90%
 
-We can handle non-linear relationships by **transforming** variables. 
+## Recap via diagram
 
-```{r}
-mtcars %>%
-  ggplot(aes(x = wt, y = mpg)) + 
-  geom_point() + 
-  geom_smooth(method = lm, formula = y ~ x, se = F)
-
-mtcars %>%
-  mutate(log_wt = log(wt)) %>% 
-  ggplot(aes(x = log_wt, y = mpg)) + 
-  geom_point() + 
-  geom_smooth(method = lm, formula = y ~ x, se = F)
-
-mtcars %>%
-  mutate(log_mpg = log(mpg)) %>% 
-  ggplot(aes(x = wt, y = log_mpg)) + 
-  geom_point() + 
-  geom_smooth(method = lm, formula = y ~ x, se = F)
-```
-
-
-with You can use many predictors as you want. 
-
-They can be distinct predictors
-
-```{r}
-lm(mpg ~ wt + disp + hp + qsec, data = mtcars)
-```
-
-or **transformations** of the same predictor 
-
-
-```{r}
-wt_seq <- tibble(wt = seq(min(mtcars$wt), max(mtcars$wt), by = .01))
-  
-wt_seq %>%
-  mutate(mpg = predict(lm(mpg ~ wt, data = mtcars), newdata = .)) -> mtcars_wt
-
-mtcars %>% 
-  ggplot(aes(x = wt, y = mpg)) + 
-  geom_point() + 
-  geom_line(data = mtcars_wt, col = "blue")
-
-```
 
 
 ---
 
-```{r}
-wt_seq %>%
-  mutate(mpg = predict(lm(mpg ~ wt + I(wt^2), data = mtcars), newdata = .)) -> mtcars_wt
-
-mtcars %>% 
-  ggplot(aes(x = wt, y = mpg)) + 
-  geom_point() + 
-  geom_line(data = mtcars_wt, col = "blue")
-
-```
-
-
+## Illustration
 
 ```{r}
-wt_seq %>%
-  mutate(mpg = predict(lm(mpg ~ wt + I(wt^2) + I(wt^3) + I(wt^4) + I(wt^5) + I(wt^6) + I(wt^7) + I(wt^8) + I(wt^9) + I(wt^10), data = mtcars), newdata = .)) -> mtcars_wt
-
-mtcars %>% 
-  ggplot(aes(x = wt, y = mpg)) + 
-  geom_point() + 
-  geom_line(data = mtcars_wt, col = "blue")
-
+set.seed(30500)
+y <- rbinom(n = 20, size = 1, prob = 2/3)
+y
+mean(y) # sample mean
+lm(y ~ 1) # simplest OLS regression possible: just the intercept
 ```
 
+---
+
+class: inverse, middle, center
+
+# One categorical predictor
+
+---
+
+## Predicting the value of a random variable based on a predictor
+
+Let $Y$ denote the number of heads in a single flip of a coin. If $X = 0$, the coin is fair; if $X = 1$, the coin is biased. 
+
+--
+
+The conditional distribution: 
+
+$$
+f_{Y|X}(y|x) = \begin{cases}
+1/2 & x = 0, y = 0 \\\
+1/2 & x = 0, y = 1  \\\
+1/4 & x = 1, y = 0 \\\
+3/4 & x = 1, y = 1 \\\
+0 & \text{otherwise}
+\end{cases}
+$$
+--
+
+By same logic, 
+
+- knowing the distribution, the best (in terms of MSE) prediction using $X$ is the **conditional expectation** $E[Y \mid X]$
+- the sample analog is the **sample mean** at each value of $X$
+- minimizing the **sum of squared residuals** (sample analog of MSE) via OLS also gives sample mean at each value of $X$ 
+
+---
+
+## Another illustration
 
 ```{r}
-mtcars %>% 
-  ggplot(aes(x = wt, y = mpg)) + 
-  geom_point() -> p
+n <- 20
+dat <- tibble(x = rbinom(n = n, size = 1, 
+                         prob = 2/3),
+              y = rbinom(n = n, size = 1, 
+                  prob = ifelse(x == 0, 1/2, 2/3)))
+dat %>% head()
 
-p + geom_smooth(method = lm, formula = y ~ x, se = F) + 
-  labs(title = "Linear")
+# conditional sample means
+dat %>% 
+  group_by(x) %>% 
+  summarize(mean(y))
+
+lm(y ~ factor(x) - 1, data = dat) # "-1" to drop the intercept
 ```
+
+---
+
+## Different ways to run the same regression
 
 ```{r}
-p + geom_smooth(method = lm, formula = y ~ poly(x, 2), se = F, col = "purple") +
-  labs(title )
+lm(y ~ factor(x) - 1, data = dat)
+lm(y ~ factor(x), data = dat)
+lm(y ~ x, data = dat)
 ```
 
-  geom_smooth(method = lm, formula = y ~ poly(x, 10), se = F, col = "red")
-```
+---
+
+class: inverse, middle, center
+
+# Two categorical predictors
+
+---
+
 
