--- a/assignments/ps4_2021.Rmd
+++ b/assignments/ps4_2021.Rmd
@@ -17,11 +17,18 @@ library(tidyverse)
 
 Consider a study that seeks to measure the effect of daily exercise on subjective mental health during finals week in December 2021 (as measured by a survey) among UChicago students.
 
-1a) For a given student, what (in words) are the potential outcomes in this study?
+1a) For a given student, what (in words) are the potential outcomes in this study?  
 
-1b) With reference to the Fundamental Problem of Causal Inference, explain why it is difficult if not impossible to measure the effect of this treatment on this outcome for any individual student.
+The state of subjective mental health an individual student has.
 
-1c) In observational studies, treatment may be related to the potential outcomes. Give one plausible account of how and why treatment may be related to the potential outcomes in this example.
+
+1b) With reference to the Fundamental Problem of Causal Inference, explain why it is difficult if not impossible to measure the effect of this treatment on this outcome for any individual student.  
+
+For any individual student, she can either exercise daily or not exercise daily, hence we can only observe one state of subjective mental health. To measure the effect of the treatment on an individual student, we need to observe both the mental health state given she exercised daily and the mental health state given she had not exercised daily, which, as argued, cannot be observed at the same time.  
+
+1c) In observational studies, treatment may be related to the potential outcomes. Give one plausible account of how and why treatment may be related to the potential outcomes in this example.  
+
+Those who are willing to exercise daily may have a better ability in adjusting to a better state of mental health than those who are not willing to exercise daily.  
 
 
 ## Question 2
@@ -36,18 +43,71 @@ dat <- tibble(Y0 = runif(n = n, min = 0, max = 1)) %>%
 ```
 
 2a) Compute the *individual treatment effect (ITE)* for each individual and plot an ECDF of the ITEs. (*Hint*: see ECDF code in lecture 3.2.)
+```{r}
+dat <- dat %>% 
+    mutate('ITE' = Y1 - Y0)
+plot2a <- ggplot(data = dat, aes(x = ITE)) + 
+    stat_ecdf() +
+    labs(y = 'Empirical CDF', 
+         title = 'ECDF of ITEs')
 
+dat
+plot2a
+```
+ 
 
 2b) Suppose we choose as our estimand the average treatment effect (ATE). What is the ATE for this population?
+```{r}
+ATE <- mean(dat$ITE)
+ATE
+```
+
 
 
 2c) Add a treatment variable `D` that takes on the value 1 with probability `Y1` and 0 otherwise. (Hint: use the `rbinom()` function.)
+```{r}
+dat <- dat %>% 
+    mutate('D' = rbinom(n = n, size = 1, prob = Y1))
+dat
+```
+
 
 2d) Compute the difference in means using this treatment variable and compare it to the ATE. Why is the difference in means a bad estimator for the ATE in this case?
 
+```{r}
+mean_treatment <- dat %>% 
+    filter(D == 1) %>% 
+    summarize(mean(Y1, na.rm = TRUE))
+mean_control <- dat %>% 
+    filter(D == 0) %>% 
+    summarize(mean(Y0, na.rm = TRUE))
+diff_in_means <- mean_treatment - mean_control
+comparison <- diff_in_means - ATE
+comparison
+
+# It is a bad estimator because he probability of receiving treatment is related with the potential outcome Y(1)
+
+```
+
 2e) Create a new treatment variable `D_random` that is assigned at random, as if this were a randomized experiment. 
+```{r}
+dat <- dat %>% 
+    mutate('D_random' = sample(x = c(0,1), size = 1000, replace = TRUE))
+dat
+```
 
 2f) Compute the difference in means using this treatment variable and compare it to the ATE.  
+```{r}
+mean_treatment <- dat %>% 
+    filter(D_random == 1) %>% 
+    summarize(mean(Y1, na.rm = TRUE))
+mean_control <- dat %>% 
+    filter(D_random == 0) %>% 
+    summarize(mean(Y0, na.rm = TRUE))
+diff_in_means <- mean_treatment - mean_control
+comparison <- diff_in_means - ATE
+comparison
+```
 
 
 
@@ -61,25 +121,96 @@ dat <- tibble(Y0 = rnorm(n = n, mean = 0, sd = 1)) %>%
 ```
 
 3a) Compute the *individual treatment effect (ITE)* for each individual and plot an ECDF of the ITEs.
+```{r}
+dat <- dat %>% 
+    mutate('ITE' = Y1 - Y0)
+plot3a <- dat %>% 
+    ggplot(aes(x = ITE)) +
+    stat_ecdf() +
+    labs(y = 'Empirical CDF', 
+         title = 'ECDF of ITEs')
+plot3a
+```
 
 3b) Create a scatterplot of `Y1` (vertical axis) against `Y0` (horizontal axis).   
+```{r}
+plot3b <- dat %>% 
+    ggplot(aes(x = Y0, y = Y1)) +
+    geom_point() +
+    labs(x = 'Y0', 
+         y = 'Y1')
+plot3b
+```
 
-3c) If this were a study of students, and `Y` were a measure of academic achievement (with `D` a study skills training session), how would you interpret a point at (2,2) on the previous plot? How about a point at (-1, 0)?
+3c) If this were a study of students, and `Y` were a measure of academic achievement (with `D` a study skills training session), how would you interpret a point at (2,2) on the previous plot? How about a point at (-1, 0)?  
 
-3d) Suppose we choose as our estimand the average treatment effect (ATE). What is the ATE for this population?
+(2, 2) would mean that training session has no causal effect on the student's academic achievement; (-1, 0) means the training session has a positive causal effect of 1 unit on the student's academic achievement  
+
+
+3d) Suppose we choose as our estimand the average treatment effect (ATE). What is the ATE for this population?  
+
+ATE is the average causal effect of the training session on students' academic achievement
 
 
 3e) Create a new variable `pr_treatment` that is `1 - exp(Y0)/(1 + exp(Y0))`. Plot `pr_treatment` (vertical axis) as a function of `Y0`. 
+```{r}
+dat <- dat %>% 
+    mutate('pr_treatment' = 1 - exp(Y0)/(1 + exp(Y0)))
+plot3e <- dat %>% 
+    ggplot(aes(x = Y0, y = pr_treatment)) +
+    geom_point() +
+    geom_smooth()
+plot3e
+```
+
 
 3f) Again supposing `Y` is a measure of academic achievement and `D` a study skill training, why might the probability of treatment be related to `Y0` as in this hypothetical example? 
 
+The ones who are more likely to take the treatment (i.e. going to the study skill training), are very likely those who previously are not good at studying or have not mastered study skills, therefore they had a low previous academic achievement (Y0 is low) and wanted to take the training.
+
 3g) Add a treatment variable `D` that takes on the value 1 with probability `pr_treatment` and 0 otherwise. Hint: use the `rbinom()` function.
+```{r}
+dat <- dat %>% 
+    mutate('D' = rbinom(n = n, size = 1, prob = pr_treatment))
+```
+
 
 3h) Compute the difference in means using this treatment variable and compare it to the ATE. Why is the difference in means a bad estimator for the ATE in this case?
 
+```{r}
+mean_treatment <- dat %>% 
+    filter(D == 1) %>% 
+    summarize(mean(Y1, na.rm = TRUE))
+mean_control <- dat %>% 
+    filter(D == 0) %>% 
+    summarize(mean(Y0, na.rm = TRUE))
+diff_in_means <- mean_treatment - mean_control
+ATE <- mean(dat$Y1) - mean(dat$Y0)
+comparison <- diff_in_means - ATE
+comparison
+
+# Again, the probability 
+```
 
 3i) Create a new treatment variable `D_random` that is assigned at random, as if this were a randomized experiment. 
+```{r}
+dat <- dat %>% 
+    mutate('D_random' = sample(x = c(0, 1), size = n, replace = TRUE))
+```
+
 
 3j) Compute the difference in means using this treatment variable and compare it to the ATE.  
+```{r}
+mean_treatment <- dat %>% 
+    filter(D_random == 1) %>% 
+    summarize(mean(Y1, na.rm = TRUE))
+mean_control <- dat %>% 
+    filter(D_random == 0) %>% 
+    summarize(mean(Y0, na.rm = TRUE))
+diff_in_means <- mean_treatment - mean_control
+ATE <- mean(dat$Y1) - mean(dat$Y0)
+comparison <- diff_in_means - ATE
+comparison
+```
 
 
